[package]
name = "gopa"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.11.3"
clap = { version = "4.2.7", features = ["derive"] }
execute = "0.2.12"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 's'   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Maximize size reduction optimizations.
